force-app/main/default/objects/Cargo__c/Cargo__c.object-meta.xml
<CustomObject>
    <description>Individual cargo items being shipped in a shipment</description>
    <label>Cargo</label>
    <nameField>
        <displayFormat>CARGO-{0000}</displayFormat>
        <label>Cargo Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cargo</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>