force-app/main/default/objects/Cargo__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category of cargo being shipped</description>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Perishables</fullName>
            </value>
            <value>
                <fullName>Hazardous Materials</fullName>
            </value>
            <value>
                <fullName>Raw Materials</fullName>
            </value>
            <value>
                <fullName>Manufactured Goods</fullName>
                <default>true</default>
                <label>Manufactured Goods</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>