force-app/main/default/objects/Cargo__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed description of the cargo</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>