force-app/main/default/objects/Cargo__c/fields/Special_Handling__c.field-meta.xml
<CustomField>
    <fullName>Special_Handling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if cargo requires special handling</description>
    <label>Special Handling Required</label>
    <type>Checkbox</type>
</CustomField>