force-app/main/default/objects/Cargo__c/validationRules/Cargo_Weight_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Cargo_Weight_Must_Be_Positive</fullName>
    <active>true</active>
    <description>Ensures that cargo weight is greater than zero</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Weight__c)),
    Weight__c &lt;= 0
)</errorConditionFormula>
    <errorDisplayField>Weight__c</errorDisplayField>
    <errorMessage>Cargo weight must be greater than zero. Please enter a valid weight.</errorMessage>
</ValidationRule>